al treilea commit

--- a/Recipe-1.html
+++ b/Recipe-1.html
@@ -11,6 +11,7 @@
   </h1>      
 <img src="perfection_salad.jpg" alt="McCall's American Recipe">
   <h2>Ingredientele</h2>
+  <ul>
    <li><strong>2</strong> <i>unflavored gelatine</i></li>
    <li><strong>1/2</strong> <i>cup sugar</i></li>
    <li><strong>1</strong> <i>teaspoon salt</i></li>
@@ -19,26 +20,37 @@
    <li><strong>2</strong> <i>tablespoons vinegar</i></li>
    <li><strong>1</strong> <i>cup shredded carrot</i></li>
    <li><strong>1</strong> <i>cup sliced celery</i></li>
- <ol>
-       <p>
-           <li>In small saucepan, combine gelatine, sugar, and salt; mix well.</li></p>
-       <p>
-           <li>Add 1 cup water. Heat over low heat, stirring constantly, until sugar and gelatine are dissolved. Remove from heat. </li></p>
-       <p>
-           <li>Stir in apple juice, lemon juice, vinegar, and 1/4 cup cold water. Pour into medium bowl. Refrigerate 1 hour, or until mixture is consistency of unbeaten egg white.</li></p>
-       <p>
-           <li> Add carrot, celery, cabbage, green pepper, and pimiento; stir until well combined.</li></p>
-       <p>
-           <li>Turn into decorative, 1 1/2-quart mold. Refrigerate 4 hours,or until firm.</li></p> 
-       <p>
-           <li>To unmold: Run small spatula around edge of mold; invert onto serving plate. Place hot dishcloth over mold; shake gently to release. Repeat, if necessary. Lift off mold. refrigerate until ready to serve.</li></p>
-    <p>Makes 8 servings.</p>
+</ul>
+<h2>Preparation</h2>
+   <ol>
+    <li><p>In small saucepan, combine <b>gelatine, sugar, and salt</b>; mix well.</p>
+    </li>
+    <li><p>Add <b>1 cup water</b>.</p> 
+        <p>Heat over low heat, stirring constantly, until <b>sugar</b> and <b>gelatine</b> are dissolved.</p> 
+        <p>Remove from heat.</p>
+    </li>
+    <li>
+        <p>Stir in <b>apple juice, lemon juice, vinegar</b> and  <b>1/4 cup cold water</b>.</p> 
+        <p>Pour into medium bowl.</p>
+        <p>Refrigerate 1 hour, or until mixture is consistency of unbeaten egg white.</p>
+    </li>
+    <li>
+        <p>Add <b>carrot, celery, cabbage, green pepper, and pimiento</b>; stir until well combined.</p>
+    </li>
+
+    <li>
+        <p>Turn into decorative, 1 1/2-quart mold.</p> 
+        <p>Refrigerate 4 hours, or until firm.</p>
+    </li>
+    <li>
+        <p>To unmold: Run small spatula around edge of mold; invert onto serving plate.</p> 
+        <p>Place hot dishcloth over mold; shake gently to release.</p>
+        <p>Repeat, if necessary.</p> 
+        <p>Lift off mold. Refrigerate until ready to serve.</p>
+        <p>Makes 8 servings.</p>
+    </li>
+
 <hr width="100%"/>
-
- <table></table>
-
-
- </h1>
  </ol>
 </body>
 </html>
