--- a/Recipe-2.html
+++ b/Recipe-2.html
@@ -6,30 +6,45 @@
     <title>Cherry pineapple Bologna</title>
 </head>
 <body>
-    <h1>
-        Cherry Pineapple Bologna
-     </h1>      
-   <img width="500px" src="Cherry pineapple.jpg">
-   <br> <strong>1 pound ring Bologna</strong> 
-   <br> <strong>Cherry Pineapple Glaze (Below)</strong>
-   <br><strong>Potato Buds instant puffs (enough for 4 servings)</strong></br>
-
-
-<p>If necessary remove casing from bologna; arrange bologna in ungreased 9-inch pie pan. Cut ring diagonally at 2-inch intervals, being careful not to cut completely through. Separate cuts and spoon in part of glaze. Spread remaining glaze on top.</p>
-<p>Heat oven to 400°. Prepare Potato Buds instant puffs as directed on package. Mound potatoes in center of ring. Bake 20 minutes or until potatoes are light brown. 4 servings.</p>
- 
+    <h1>Cherry Pineapple Bologna</h1>      
+   <img width="500px" src="Cherry pineapple.jpg">   
+   <ul>
+    <li><b>1 pound ring bologna</b></li> 
+    <li><b>Cherry Pineapple Glaze (Below)</b></li>
+    <li><b>Potato Buds instant puffs (enough for 4 servings)</b> </li>
+</ul>
+ <ol>      
+<p>If necessary remove casing from bologna; arrange bologna in ungreased 9-inch pie pan. 
+<p>Cut ring diagonally at 2-inch intervals, being careful not to cut completely through.</p>
+<p>Separate cuts and spoon in part of glaze.</p> 
+<p> Spread remaining glaze on top.</p>
+<p>Heat oven to 400°.</p>
+<p>Prepare Potato Buds instant puffs as directed on package.</p>
+<p>Mound potatoes in center of ring. </p>
+<p> Bake 20 minutes or until potatoes are light brown. 4 servings.</p>
+</ol>
 <p align="center"><strong>Pineapple Glaze</strong></p>
+<h2>Ingredients</h2>
+    <ul>
+        <li><em>1/2 cup</em> crushed pineapple</li> 
+        <li><em>1/4 cup</em> coarsely chopped maraschino cherries</li>
+        <li><em>1/4 cup</em> light corn syrup</li>
+        <li><em>2 tabelspoons</em> white vinegar</li>
+        <li><em>1/4 teaspoon</em> cloves</li>
+        <li><em>2 drops red </em> food color</li>
+        <li><em>1 1/2 teaspoons </em> water</li>
+        <li><em>1 1/2 teaspoons </em> cornstarch</li>
+    </ul>
+<h2>Preparation</h2>
+<ol>
+    
+        <li><p>Heat <b>pineapple, cherries, corn syrup, vinegar, cloves and food color</b> to boiling, stirring occasionally.</p></li>
+        <li><p>Reduce heat; simmer 15 minutes.</p></li>
+        <li><p>Blend <b>water</b> and <b>cornstarch</b>; stir into <b>fruit</b>.</p></li>
+        <li><p>Cook, stirring constantly, until mixture thickens and boils.</p></li>
+        <li><p>Boil and stir 1 minute.</p></li>   
 
-    <li><strong>1/2 cup crushed pineapple</strong></li>
-      <li><strong>1/4 cup coarsely chopped maraschino cherries</strong></li>
-      <li><strong>1/4 cup light corn syru</strong></li> 
-      <li><strong>2 tabelspoons white vinegar</strong></li>
-      <li><strong>1/4 teaspoon cloves</strong></li>
-      <li><strong>2 drops red food color</strong></li>
-      <li><strong> 1/2 teaspoons water</strong></li>
-      <li><strong>1 cup sliced celery</strong></li>
-
-  <p>Heat pineapple, cherries, corn syrup, vinegar, cloves and food color to boiling, stirring occasionally. Reduce heat; simmer 15 minutes. Blend water and cornstarch; stir into fruit. Cook, stirring constantly, until mixture thickens and boils. Boil and stir 1 minute.</p>        
+</ol>
        <p>Makes 8 servings.</p>
 
    <hr width="100%"/>
