--- a/Recipe-3.html
+++ b/Recipe-3.html
@@ -6,26 +6,37 @@
     <title>Hamburger Pie</title>
 </head>
 <body>
-    <h1>
-        Hamburger Pie
-     </h1>      
+    <h1>Hamburger Pie</h1>      
    <img width="500px" src="hamburger_pie.jpg">
-    <li><strong>1 pound ground beef</strong></li>
-      <li><strong>Potato Buds instant puffs (enough for 8 servings</strong></li>
-      <li><strong>1 egg</strong></li> 
-      <li><strong>1 teaspoon salt</strong></li>
-      <li><strong>1/8 teaspoon pepper</strong></li>
-      <li><strong>1 tablespoon instant minced onion</strong></li>
-      <li><strong> 3/4 cup catsup</strong></li>
-      <li><strong>1cup milk</strong></li>
-      <li><strong>1/2 cup shredded sharp Cheddar cheese (2 ounces)</strong></li>
-
-  <p>Heat oven to 350°. Mix meat, 1 1/3 cups of the instant puffs (dry), the egg, salt pepper, onion, catsup and milk. Spread in ungreased pie pan, 9×1 1/2 inches. Bake uncovered 35 to 40 minutes.
-    Prepare remaining instant puffs as directed on package for 4 servings. Top baked meat loaf with mashed potatoes; sprinkle with cheese. Bake 3 to 4 minutes longer or until cheese melts. 4 or 5 servings.</p> 
-    <p><strong>Storing, Freezing, and Thawing Uncooked Ground Beef </strong> STORE, loosely covered, in coldest part of the refrigerator up to 24 hours (if you are planning to use the ground beef within 24 hours of purchasing).</p>     
-       
-<p>FREEZE for longer storage. Wrap one-pound packs or individual patties in freezer wrap, separating patties with double layer of freezer wrap. Label with date. Store no longer than 4 months.</p>
-<p>THAW wrapped 5 to 8 hours in refrigerator or cook patties frozen.</p>
+  
+  <ul>
+   <li> <em>1 pound</em>beef></li>
+      <li>Potato Buds instant puffs (enough for 8 servings</li>
+      <li><em>1 egg</em> </li> 
+      <li><em>1 teaspoon </em> salt</li>
+      <li><em>1/8 teaspoon</em> pepper</li>
+      <li><em>1 tablespoon instant minced onion</em></li>
+      <li><em> 3/4 cup </em>catsup</li>
+      <li><em>1cup </em> milk</li>
+      <li><em>1/2 cup</em>shredded sharp Cheddar cheese (2 ounces)</li>
+  </ul>
+ <h2>Preparation</h2>
+ <ol>
+    <p>Heat oven to 350°. </p>
+    <p> Mix <em>meat</em> ,1 1/3 cups  <em>instant puffs (dry)</em> of the , <em>the eggsalt pepper, onion, catsup and milk.</em> , </p>
+    <p> Spread in ungreased <em> pie pan</em>, 9×1 1/2 inches.  </p>
+    <p> Bake uncovered 35 to 40 minutes.</p>
+    <p> Prepare remaining instant puffs as directed on package for 4 servings.</p>
+    <p> Top baked <em>meat</em>  loaf with mashed potatoes; sprinkle with cheese.</p>
+    <p> Bake 3 to 4 minutes longer or until cheese melts. 4 or 5 servings. </p> 
+    <p> Storing, Freezing, and Thawing Uncooked Ground <em>Beef</em>  
+    <p> STORE, loosely covered, in coldest part of the refrigerator up to 24 hours (if you are planning to use the ground beef within 24 hours of purchasing).</p>     
+    <p> FREEZE for longer storage.</p>
+    <p> Wrap one-pound packs or individual patties in freezer wrap, separating patties with double layer of freezer wrap.</p>
+    <p> Label with date.</p> 
+    <p> Store no longer than 4 months.</p>
+    <p> THAW wrapped 5 to 8 hours in refrigerator or cook patties frozen.</p>
+</ol>
 <p>Makes 8 servings.</p>
 
 <hr width="100%"/>
