--- a/index 1.html
+++ b/index 1.html
@@ -5,25 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuprins</title>
 </head>
-<body>
- 
-<ul>
-   <p><a href="http://127.0.0.1:5500/Recipe-1.html"> <ol>Perfection Salad</ol> </a></p> 
-   <p><a href="http://127.0.0.1:5500/Recipe-2.html"> <ol>Cherry Pineapple Bologna</ol> </a></p> 
-   <p><a href="http://127.0.0.1:5500/Recipe-3.html"> <ol>Hamburger Pie</ol> </a> </p>  
-</ul>
+
+<body style="background-color: beige;">
+<header>
+<nav>
+    
+</nav>
+    <a href="http://127.0.0.1:5500/Recipe-1.html"> Perfection Salad </a>  
+    <a href="http://127.0.0.1:5500/Recipe-2.html"> Cherry Pineapple Bologna</a>
+    <a href="http://127.0.0.1:5500/Recipe-3.html"> Hamburger Pie</a>  
+  
+</header>
+<main>
+        <aside>
+
+        </aside>
+         
+</main>
  <h1>Recipes</h1>
 <table>
-    <tr>   
-       <th><a href="http://127.0.0.1:5500/Recipe-1.html"> <ol>Perfection Salad</ol> </a></th>
+    <thead >
+        <tr>
+            <p><th>Recipe</th></p>
+            <p><th>kcal</th></p>
+        </tr>
+</thead>
+<tbody>
+    <tr>
+        <td> <a href="http://127.0.0.1:5500/Recipe-1.html">Perfection Salad</a></td>
+        <td>100</td>
     </tr>
     <tr>
-        <th><a href="http://127.0.0.1:5500/Recipe-2.html"> <ol>Cherry Pineapple Bologna</ol> </a></th>
-    </tr>
+         <td><p><a href="http://127.0.0.1:5500/Recipe-2.html">Cherry Pineapple Bologna</a></p></td>
+         <td>200</td>
+        </tr>
     <tr>
-        <th><a href="http://127.0.0.1:5500/Recipe-3.html"> <ol>Hamburger Pie</ol> </a></th>
+        <td><a href="http://127.0.0.1:5500/Recipe-3.html">Hamburger Pie</a></td>
+        <td>300</td>
     </tr>
-
+</tbody>
     </table>
 </body>
+<footer>
+
+</footer>
 </html>
